hphp/test/zend/good/tests-classes/type_hinting_003.php.exp
Test::f1()
array(1) {
  [0]=>
  int(42)
}
Test::f2()
NULL
Test::f2()
NULL
Test::f3()
array(0) {
}
Test::f4()
array(1) {
  [0]=>
  int(25)
}
HipHop Fatal error: Argument 1 passed to Test::f1() must be an instance of array, int given in hphp/test/zend/good/tests-classes/type_hinting_003.php on line 9
